<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/heading"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meeting_people"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:onClick="buttonTapped"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_tour"
            android:textAllCaps="false"
            android:onClick="buttonTapped"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_food"
            android:textAllCaps="false"
            android:onClick="buttonTapped"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/house"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arround_the_house"
            android:textAllCaps="false"
            android:onClick="buttonTapped"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speaking_time"
            android:textAllCaps="false"
            android:onClick="buttonTapped"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enjoying_sports"
            android:textAllCaps="false"
            android:onClick="buttonTapped"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/activities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_profession"
            android:textAllCaps="false"
            android:onClick="buttonTapped"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment"
            android:textAllCaps="false"
            android:onClick="buttonTapped"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />


    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>